Completed category module